<resources>
    <string name="app_name">SmartPan</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="search">search</string>
    <string name="find_a_place">Find a place</string>
    <string name="myoffer_txt">myOffers</string>
    <string name="promotion_txt">Buy One Get One Free!!!</string>
    <string name="fullName_txt">Name</string>
    <string name="Phone_txt">Phone</string>
    <string name="EmailAddress_txt">Email Address</string>
    <string name="Password_txt">Password</string>
    <string name="ConfirmPassword_txt">Confirm Password</string>
    <string name="SIGN_UP_txt">SIGN UP</string>
    <string name="login_txt">LOGIN</string>
    <string name="SKIP_txt">SKIP FOR NOW</string>
    <string name="forgot_txt">I forgot my password!</string>
    <string name="Not_Member_txt">NOT A MEMBER ? REGISTER</string>
    <string name="languages">عربي</string>
    <string name="lang_en">English</string>
    <string name="select_your_location">select Your Location</string>
    <string name="countries_code">choose country_code </string>
    <string name="cities">choose your city </string>
    <string name="start">Start</string>
    <string name="forget_you_password">Forget you password?</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="forget_password_details_txt">To reset your password,enter your phone number registered with OR email address and we will send you code to create new password.</string>
    <string name="or">OR</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="please_enter_the_code_send_to_the_phone_number_entered">please Enter the code send to the phone number entered.</string>
    <string name="selectlanguage">select language</string>
    <string name="countries">choose your country </string>
    <string name="Category">Category </string>
    <string name="ScanQR">Scan QR</string>
    <string name="Unlock_txt">Unlock 1000s of money-saving deals</string>
    <string name="Buy_txt">Buy one get one free</string>
    <string name="Register_txt">REGISTER FOR FREE TRAIL</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="scan_qr">Scan QR</string>
    <string name="nearby_offers">Nearby Offers</string>
    <string name="myoffers">MyOffers</string>
    <string name="al_riyadh">Al Riyadh</string>
    <string name="search_through_offers">Search through offers</string>
    <string name="still_interested">Still interested</string>
    <string name="view_all_offers">View all offers</string>
    <string name="your_today_specail_offer">Your today specail offer</string>
    <string name="top_providers">Top Providers</string>
    <string name="nearbyoffers">Nearby offers</string>
    <string name="switch_between_two_of_myoffers_applications">Switch between two of myOffers Applications</string>
    <string name="myoffersapplication">myOffersApplication</string>
    <string name="myoffers_delivery_application">myOffers Delivery Application</string>
    <string name="select_city">Select City</string>
    <string name="all">All</string>
    <string name="used_offers">Used Offers</string>
    <string name="comments">Comments</string>
    <string name="favourites">Favourites</string>
    <string name="reviews">Reviews</string>
    <string name="subscription">Subscription</string>
    <string name="free_offers">Free Offers</string>
    <string name="change">Change</string>
    <string name="change_underline"><u>Change</u></string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="renew_plan">Renew Plan</string>
    <string name="three_payment_otion">use one from three payment options that suites you mostly</string>
    <string name="use_recharging_card">Use Recharging Card</string>
    <string name="scan_card_qr">Scan Card QR</string>
    <string name="Use_Credit_Card">Use Credit Card</string>
    <string name="cancel">Cancel</string>
    <string name="enter_recharging_code">Enter Recharging Code</string>
    <string name="submit_code">Submit Code</string>
    <string name="enter_code">Enter code</string>
    <string name="_50_sar">50 SAR</string>
    <string name="_150_days">150 Days</string>
    <string name="_100_sar">100 SAR</string>
    <string name="_250_days">250 Days</string>
    <string name="_150_sar">150 SAR</string>
    <string name="_500_days">500 Days</string>
    <string name="enter_your_data">Enter Your Data</string>
    <string name="flow_your_free_offers_to_order_your_meal_freely">Flow your free offers to order your meal freely</string>
    <string name="free_meal">Free Meal</string>
    <string name="Notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="change_password">Change password</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="general">General</string>
    <string name="change_notification_settings">Change notification settings</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="faq_s">FAQ,s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="language">Language</string>
    <string name="country_and_city">Country and City</string>
    <string name="sign_out">Sign out</string>
    <string name="save">Save</string>
    <string name="birthdate">BirthDate</string>
    <string name="gender">Gender</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="notification_stores">Notification stores</string>
    <string name="turn_on_off_notification_about_new_stores">Turn on/off notification about new stores</string>
    <string name="nearby">Nearby</string>
    <string name="turn_on_off_notifications_about_your_favorites_stores_offers">Turn on/off notifications about your favorites stores offers</string>
    <string name="turn_on_off_notifications_when_nearby_stores_found">Turn on/off notifications when nearby stores found</string>
    <string name="country_code">country code</string>
    <string name="view_on_map">View on map</string>
    <string name="change_location">Change Location</string>
    <string name="search_myoffers">Search myOffers</string>
    <string name="offers_and_coupon">   Offers &amp; Coupons </string>
    <string name="use_one_of_three_payment_options_that_suits_you_mostly">use one of three payment options that suits you mostly</string>
    <string name="use_at_front_desk">Use at front desk</string>
    <string name="use_credit_card">Use Credit Card</string>
    <string name="pin_code">Pin Code</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="share_and_let_others_win_with_you"><u>Share and let others win with you</u></string>
    <string name="you_ve_just_saved">You\'ve just saved</string>
    <string name="and_earned_yourself">And earned yourself</string>
    <string name="see_more_offers">See more offers</string>
    <string name="congratulations">Congratulations</string>
    <string name="my_liked_places">My Liked Places</string>
    <string name="liked_place">Liked Place</string>
    <string name="by"><u>by</u></string>
    <string name="select_category">Select Category</string>
    <string name="or_contact_our_support_to_suggest_add_your_favourites_restaurant"><u>Or contact our support to suggest add your favourites restaurant</u></string>
    <string name="find_places_to_add">Find Places To Add</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last week</string>
    <string name="last_year">Last Year</string>
    <string name="extra_points_earned_in_each_order">* Extra points earned in each order</string>
    <string name="you_have_the_full_features_of_premium_members">You have the full features of Premium Members</string>
    <string name="exclusive_offers_made_for_you">* Exclusive offers made for you</string>
    <string name="exclusive_offers_in_each_provider_for_you_only">* Exclusive offers in each provider for you only</string>
    <string name="you_are_now_on_premium_member">You are now on Premium Member</string>
    <string name="points">Points</string>
    <string name="change_branch">Change Branch</string>
    <string name="reedem_coupon">Reedem coupon</string>
    <string name="follow_your_order">Follow your Order</string>
    <string name="address_book">Address Book</string>
    <string name="live_chat">Live Chat</string>
    <string name="delivery_to">Delivery to</string>
    <string name="hello">Hello,</string>
    <string name="try_myoffers_to_get_free_service_buy_one_get_one_free_or_use_delivery_service_and_get_multiple_restaurants_near_you">Try myOffers to get free service, Buy one get one free or use delivery service and get multiple restaurants near you</string>
    <string name="buy_one_get_one_free">Buy One Get One Free</string>
    <string name="info">Info</string>
    <string name="review">Reviews</string>
    <string name="menu">Menu</string>
    <string name="online_menu">Online Menu</string>
    <string name="contacts">Contacts</string>
    <string name="basket">Basket</string>
    <string name="your_order">Your Order</string>
    <string name="edit"><u>Edit</u></string>
    <string name="add_products"><u>Add Products</u></string>
    <string name="have_a_promo_code">Have a promo code?</string>
    <string name="comments_optional">Comments (Optional)</string>
    <string name="subtotal">Subtotal</string>
    <string name="service_fee_0">Service fee(0%)</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="procced_to_checkout">Procced to Checkout</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="order_summary">Order Summary</string>
    <string name="pay_online">Pay Online</string>
    <string name="select_credit_card">Select Credit Card</string>
    <string name="add_new_credit_card_details">Add New Credit Card Details</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="follow_order">Follow Order</string>
    <string name="has_your_order_arrived">Has your order arrived?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="company_optional">Company (optional)</string>
    <string name="address">Address</string>
    <string name="floor_optional">Floor (optional)</string>
    <string name="apartment_number">Apartment number</string>
    <string name="address_notes_optional">Address Notes (optional)</string>
    <string name="delivery_instructions_optional">Delivery Instructions (optional)</string>
    <string name="save_address">Save Address</string>
    <string name="select_address">Select Address</string>
    <string name="choose_from_your_address_book">Choose from your address book</string>
    <string name="more">more</string>
    <string name="sar">SAR</string>
    <string name="next">Next</string>
    <string name="welcome">welcome</string>
    <string name="days">days</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="payment">payment</string>
    <string name="used">used</string>
    <string name="km">km</string>
    <string name="near">Near</string>
    <string name="UseName">UserName</string>
    <string name="Smartpan">smart pan</string>
</resources>