<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Register.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/margin_R_L"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:gravity="center_horizontal"
            android:text="@string/Smartpan"
            android:textColor="@color/whitecolor"
            android:textSize="@dimen/txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/whitecolor"
            android:hint="@string/fullName_txt"
            android:textColor="@color/whitecolor"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/margin_R_L"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/lang_txt_size"
            android:backgroundTint="@color/whitecolor"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginEnd="@dimen/margin_R_L"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_txt"
            >
            <EditText
                android:id="@+id/userName_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/whitecolor"
                android:hint="@string/UseName"
                android:textColor="@color/whitecolor"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="@dimen/lang_txt_size"
                android:backgroundTint="@color/whitecolor"
                android:textCursorDrawable="@null"
               />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mobile_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginEnd="@dimen/margin_R_L"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user"
            >


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/whitecolor"
                android:textColor="@color/whitecolor"
                android:hint="@string/Phone_txt"
                android:textCursorDrawable="@null"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="@dimen/lang_txt_size"
                android:backgroundTint="@color/whitecolor"

                />
        </LinearLayout>



        <EditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailAddress_txt"
            android:textColorHint="@color/whitecolor"
            android:textColor="@color/whitecolor"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:layout_marginLeft="@dimen/margin_R_L"
            android:layout_marginRight="@dimen/margin_R_L"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/margin_txt"
            android:textCursorDrawable="@null"

            android:textSize="@dimen/lang_txt_size"
            android:backgroundTint="@color/whitecolor"
            android:padding="10dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile_txt" />



        <EditText
            android:id="@+id/Pass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password_txt"
            android:textColorHint="@color/whitecolor"
            android:textColor="@color/whitecolor"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:layout_marginLeft="@dimen/margin_R_L"
            android:layout_marginRight="@dimen/margin_R_L"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/margin_txt"
            android:textSize="@dimen/lang_txt_size"
            android:backgroundTint="@color/whitecolor"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_txt" />
        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="64dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:layout_marginLeft="@dimen/margin_R_L"
            android:layout_marginRight="@dimen/margin_R_L"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/margin_txt"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Pass_txt"
            >
            <RadioButton
                android:id="@+id/radioM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:checked="true"
                android:layout_weight="1"
                android:textSize="@dimen/lang_txt_size"
                android:text="Male"
                android:textColor="@color/whitecolor"

                />
            <RadioButton
                android:id="@+id/radioF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:checked="false"
                android:layout_weight="1"
                android:textSize="@dimen/lang_txt_size"
                android:text="Female"
                android:textColor="@color/whitecolor"
                android:backgroundTint="@color/whitecolor"


                />
        </RadioGroup>


        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_size"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/margin_login_size"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:background="@drawable/button_shap"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/SIGN_UP_txt"
            android:textColor="@color/whitecolor"
            android:textSize="@dimen/txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGrp" />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_R_L"
            android:layout_marginLeft="@dimen/margin_R_L"
            android:layout_marginRight="@dimen/margin_R_L"
            android:layout_marginStart="@dimen/margin_R_L"
            android:layout_marginTop="@dimen/constraint_margin"
            android:text="@string/have_an_account_login"
            android:gravity="center_horizontal"
            android:textColor="@color/whitecolor"
            android:textSize="@dimen/grid_txt_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create" />
    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>